# hybrid-pool-executor

./: .gitignore  README.rst  noxfile.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  create-wheels.yaml  tests.yml
docs/: conf.py
hybrid_pool_executor/: __init__.py  base.py  constants.py  executor.py  executor_old.py  spec.py  thread.py  typing.py  utils.py
hybrid_pool_executor/workers/: async_.py  process.py  thread.py
hybrid_pool_executor/workers/async_/: __init__.py  worker.py
hybrid_pool_executor/workers/asyncio/: __init__.py  manager.py  worker.py
hybrid_pool_executor/workers/process/: __init__.py  future.py  manager.py  queue.py  worker.py
hybrid_pool_executor/workers/thread/: __init__.py  manager.py  worker.py
tests/: test_async.py  test_hybrid.py  test_utils.py
tests/workers/: test_async.py  test_process.py  test_thread.py
