# [project]
# ...
# NOTE: setuptools' support for extra_requires is not yet stable:
#       https://setuptools.pypa.io/en/latest/userguide/dependency_management.html

[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
src_paths = ["hybrid_pool_executor", "tests", "setup.py"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.run]
branch = true
source = ["hybrid_pool_executor"]
parallel = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: nocover"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.mypy]
ignore_missing_imports = true
